operator/test/chainsaw/tamoss-operational-behaviour/route-rejection-surfaces-hostname-conflict/assert/secondary-hostname-conflict.yaml
apiVersion: tamoss.livewyer.io/v1alpha1
kind: Tamoss
metadata:
  name: secondary
(status.conditions[?type == 'RoutingReady'] | [0].status): "False"
(status.conditions[?type == 'RoutingReady'] | [0].reason): ConflictedHostname
(status.conditions[?type == 'HostnamesReady'] | [0].status): "False"
(status.conditions[?type == 'HostnamesReady'] | [0].reason): ConflictedHostname
